--- a/public/res/styles/base.less
+++ b/public/res/styles/base.less
@@ -2,51 +2,9 @@
 @import "../bower-libs/bootstrap/less/variables.less";
 @import "../bower-libs/bootstrap/less/mixins.less";
 
-// Reset
-@import "../bower-libs/bootstrap/less/normalize.less";
-
-// Core CSS
-@import "../bower-libs/bootstrap/less/scaffolding.less";
-@import "../bower-libs/bootstrap/less/type.less";
-@import "../bower-libs/bootstrap/less/code.less";
-@import "../bower-libs/bootstrap/less/grid.less";
-@import "../bower-libs/bootstrap/less/tables.less";
-@import "../bower-libs/bootstrap/less/forms.less";
-@import "../bower-libs/bootstrap/less/buttons.less";
-
-// Components
-@import "../bower-libs/bootstrap/less/component-animations.less";
-@import "../bower-libs/bootstrap/less/glyphicons.less";
-@import "../bower-libs/bootstrap/less/dropdowns.less";
-@import "../bower-libs/bootstrap/less/button-groups.less";
-@import "../bower-libs/bootstrap/less/input-groups.less";
-@import "../bower-libs/bootstrap/less/navs.less";
-@import "../bower-libs/bootstrap/less/navbar.less";
-@import "../bower-libs/bootstrap/less/breadcrumbs.less";
-@import "../bower-libs/bootstrap/less/pagination.less";
-@import "../bower-libs/bootstrap/less/pager.less";
-@import "../bower-libs/bootstrap/less/labels.less";
-@import "../bower-libs/bootstrap/less/badges.less";
-@import "../bower-libs/bootstrap/less/jumbotron.less";
-@import "../bower-libs/bootstrap/less/thumbnails.less";
-@import "../bower-libs/bootstrap/less/alerts.less";
-@import "../bower-libs/bootstrap/less/progress-bars.less";
-@import "../bower-libs/bootstrap/less/media.less";
-@import "../bower-libs/bootstrap/less/list-group.less";
-@import "../bower-libs/bootstrap/less/panels.less";
-@import "../bower-libs/bootstrap/less/wells.less";
-@import "../bower-libs/bootstrap/less/close.less";
-
-// Components w/ JavaScript
-@import "../bower-libs/bootstrap/less/modals.less";
-@import "../bower-libs/bootstrap/less/tooltip.less";
-@import "../bower-libs/bootstrap/less/popovers.less";
-
-// Utility classes
-@import "../bower-libs/bootstrap/less/utilities.less";
-
-@import (less) "../libs/highlight/styles/default.css";
-@import (less) "../libs/fontello/css/fontello.css";
+@import "../bower-libs/bootstrap/dist/css/bootstrap.css";
+@import "../libs/highlight/styles/default.css";
+@import "../libs/fontello/css/fontello.css";
 
 /* Pretty printing styles. Used with prettify.js. */
 
