--- a/public/res/styles/main.less
+++ b/public/res/styles/main.less
@@ -1,4 +1,9 @@
-@import "base.less";
+// Core variables and mixins
+@import "../bower-libs/bootstrap/less/variables.less";
+@import "../bower-libs/bootstrap/less/mixins.less";
+
+@import "../bower-libs/bootstrap/dist/css/bootstrap.css";
+@import "../libs/highlight/styles/default.css";
 
 /* Colors */
 @logo-yellow: #ffe600;
