--- a/public/res/styles/main.css
+++ b/public/res/styles/main.css
@@ -6,6 +6,7 @@ body {
 
 .navbar {
   z-index: 20;
+  margin-bottom: 0 !important;
 }
 .navbar .nav {
   float: left;
@@ -13,10 +14,9 @@ body {
 }
 
 #wmd-input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-family: "PT Sans", sans-serif;
+  width: 100%;
+  height: 100%;
+  font-family: sans-serif;
   line-height: 1.65;
   letter-spacing: normal;
   border-radius: 0;
@@ -31,7 +31,8 @@ body {
   word-break: normal;
 }
 #wmd-input > .editor-content {
-  padding: 100px;
+  padding: 0 100px;
+  outline: none;
 }
 #wmd-input.font-monospaced * {
   line-height: 1.65 !important;
